--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,18 @@ h1{
     display: flex;
     flex-direction: column;
 }
+@media only screen and (max-width: 576px) {
+    .calc-body{
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        border-radius: 0;
+        padding: 2.5rem;
+    }
+    #darkModeToggle{
+        padding: .6rem .8rem;
+    }
+}
 form{
     display: flex;
     flex-direction: column;
