--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 :root{
     /* declaraciones primarias */
-    --ff-primary: 'Open Sans', sans-serif;
+    --ff-primary: 'DM sans','Open Sans', sans-serif;
     --font-size-regular: 16px;
     --neutral-color-light: #F2F7F7;
     --neutral-color:#E2F1F3;
@@ -89,9 +89,12 @@ option{
 h1{
     text-align: center;
     padding: 2rem 0 2.5rem;
-    font-size: 1.8rem;
-    font-weight: 500;
-    letter-spacing: .02rem;
+    font-size: 1.9rem;
+    font-weight: 600;
+    background-image: linear-gradient(90deg, var(--neutral-color-dark), var(--main-color-darkest));
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 .calc-body{
     width: 80%;
@@ -102,7 +105,6 @@ h1{
     border-radius: .8rem;
     display: flex;
     flex-direction: column;
-    /* box-shadow: var(--box-shadow); */
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 .filler{
